--- a/firmware/default/Makefile
+++ b/firmware/default/Makefile
@@ -40,7 +40,7 @@ HEX_EEPROM_FLAGS += --change-section-lma .eeprom=0 --no-change-warnings
 LIBS = -lm 
 
 ## Objects that must be built in order to link
-OBJECTS = util.o config.o config_app.o config_textmode.o heater.o json_parser.o kinen.o main.o report.o sensor.o system.o xio_usart.o xio.o xio_file.o xio_signals.o xio_spi.o 
+OBJECTS = util.o config.o config_app.o config_textmode.o heater.o json_parser.o main.o report.o sensor.o system.o xio_usart.o xio.o xio_file.o xio_signals.o xio_spi.o controller.o 
 
 ## Objects explicitly added by the user
 LINKONLYOBJECTS = 
@@ -65,9 +65,6 @@ heater.o: ../heater.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 json_parser.o: ../json_parser.c
-	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
-
-kinen.o: ../kinen.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 main.o: ../main.c
@@ -95,6 +92,9 @@ xio_signals.o: ../xio/xio_signals.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 xio_spi.o: ../xio/xio_spi.c
+	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
+
+controller.o: ../controller.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 ##Link
