--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-firmware/tinyg/Release/Makefile
-firmware/tinyg/Release/makedep.mk
-firmware/tinyg/default/path
-tinyg.hex
+*.o
+*.d
+*.elf
+*.hex
+*.pyc
+*.map
+*.eep
+*.lss
+*.map
+*.srec
+*.aws
+*.atsuo
 .DS_Store
+TcfTransactionLog.csv
