--- a/firmware/extruderfin/Debug/Makefile
+++ b/firmware/extruderfin/Debug/Makefile
@@ -46,9 +46,9 @@ C_SRCS +=  \
 ../main.c \
 ../report.c \
 ../sensor.c \
-../system.c \
+../hardware.c \
 ../util.c \
-../xio/xio.c \
+../xio.c \
 ../xio/xio_file.c \
 ../xio/xio_signals.c \
 ../xio/xio_spi.c \
@@ -71,9 +71,9 @@ json_parser.o \
 main.o \
 report.o \
 sensor.o \
-system.o \
+hardware.o \
 util.o \
-xio/xio.o \
+xio.o \
 xio/xio_file.o \
 xio/xio_signals.o \
 xio/xio_spi.o \
@@ -89,9 +89,9 @@ json_parser.o \
 main.o \
 report.o \
 sensor.o \
-system.o \
+hardware.o \
 util.o \
-xio/xio.o \
+xio.o \
 xio/xio_file.o \
 xio/xio_signals.o \
 xio/xio_spi.o \
@@ -107,9 +107,9 @@ json_parser.d \
 main.d \
 report.d \
 sensor.d \
-system.d \
+hardware.d \
 util.d \
-xio/xio.d \
+xio.d \
 xio/xio_file.d \
 xio/xio_signals.d \
 xio/xio_spi.d \
@@ -125,9 +125,9 @@ json_parser.d \
 main.d \
 report.d \
 sensor.d \
-system.d \
+hardware.d \
 util.d \
-xio/xio.d \
+xio.d \
 xio/xio_file.d \
 xio/xio_signals.d \
 xio/xio_spi.d \
