--- a/firmware/extruderfin/default/Makefile
+++ b/firmware/extruderfin/default/Makefile
@@ -40,7 +40,7 @@ HEX_EEPROM_FLAGS += --change-section-lma .eeprom=0 --no-change-warnings
 LIBS = -lm 
 
 ## Objects that must be built in order to link
-OBJECTS = util.o config.o config_app.o heater.o json_parser.o main.o report.o sensor.o xio_usart.o xio_file.o xio_signals.o xio_spi.o controller.o hardware.o xio.o text_parser.o 
+OBJECTS = util.o config.o config_app.o heater.o json_parser.o main.o report.o sensor.o xio_usart.o xio_file.o xio_spi.o controller.o hardware.o xio.o text_parser.o persistence.o 
 
 ## Objects explicitly added by the user
 LINKONLYOBJECTS = 
@@ -77,9 +77,6 @@ xio_usart.o: ../xio/xio_usart.c
 xio_file.o: ../xio/xio_file.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
-xio_signals.o: ../xio/xio_signals.c
-	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
-
 xio_spi.o: ../xio/xio_spi.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
@@ -93,6 +90,9 @@ xio.o: ../xio.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 text_parser.o: ../text_parser.c
+	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
+
+persistence.o: ../persistence.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 ##Link
