--- a/firmware/extruderfin/default/Makefile
+++ b/firmware/extruderfin/default/Makefile
@@ -46,7 +46,9 @@ OBJECTS = util.o config.o config_app.o heater.o json_parser.o main.o report.o se
 LINKONLYOBJECTS = 
 
 ## Build
-all: $(TARGET) extruderfin.hex extruderfin.eep extruderfin.lss## Compile
+all: $(TARGET) extruderfin.hex extruderfin.eep extruderfin.lss size
+
+## Compile
 util.o: ../util.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
@@ -107,6 +109,10 @@ $(TARGET): $(OBJECTS)
 
 %.lss: $(TARGET)
 	avr-objdump -h -S $< > $@
+
+size: ${TARGET}
+	@echo
+	@avr-size -C --mcu=${MCU} ${TARGET}
 
 ## Clean target
 .PHONY: clean
